# bishe

./: .gitignore  AGENTS.md  README.md  app.py  cameras.json  config.py  论文.docx
blueprints/: __init__.py  auth.py  capture.py  main.py  models.py  mqtt_manager.py  settings.py
docs/superpowers/plans/: 2026-03-19-thumbnails-notifications.md
edge/: AGENTS.md  README.md  push_video.cc  tip.md
edge/docs/superpowers/plans/: 2026-03-11-ros2-yolo-safety-detection.md  2026-03-14-multicamera-plan.md  2026-04-14-detector-sampling-lock-plan.md  2026-04-14-monitor-alarm-upload-gating-plan.md  2026-04-15-halfres-detector-stream-plan.md  2026-04-15-mqtt-alarm-event-bridge-plan.md
edge/docs/superpowers/specs/: 2026-03-11-ros2-yolo-safety-detection.md  2026-03-14-multicamera-design.md  2026-04-14-detector-sampling-lock-design.md  2026-04-14-monitor-alarm-upload-gating-design.md  2026-04-15-mqtt-alarm-event-bridge-design.md
edge/install/: local_setup.sh  setup.sh
edge/install/bishe_camera/include/bishe_camera/: camera_node_factory.hpp
edge/install/bishe_camera/lib/bishe_camera/: camera_node
edge/install/bishe_camera/share/bishe_camera/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
edge/install/bishe_detector/include/bishe_detector/: detection_gate.hpp  detector_node_factory.hpp  detector_result_utils.hpp  int8_calibrator.h  trt_engine.h  utils.h  yolo.h  yolov10.h  yolov5a.h  yolov8.h
edge/install/bishe_detector/lib/bishe_detector/: detector_node
edge/install/bishe_detector/share/bishe_detector/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
edge/install/bishe_launch/share/bishe_launch/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
edge/install/bishe_launch/share/bishe_launch/config/: cameras.yaml
edge/install/bishe_launch/share/bishe_launch/launch/: bishe.launch.py  multicamera.launch.py  vision_only.launch.py
edge/install/bishe_monitor/include/bishe_monitor/: alarm_event_payload.hpp  alarm_playback_command.hpp  alarm_upload_gate.hpp  async_task_worker.hpp
edge/install/bishe_monitor/share/bishe_monitor/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
edge/install/bishe_monitor/share/bishe_monitor/cmake/: bishe_monitorConfig-version.cmake  bishe_monitorConfig.cmake
edge/install/bishe_monitor/share/bishe_monitor/config/: config.yaml
edge/install/bishe_monitor/share/bishe_monitor/environment/: ament_prefix_path.dsv  path.dsv
edge/log/: latest_build  latest_test
edge/src/bishe_camera/: CMakeLists.txt  package.xml
edge/src/bishe_camera/include/bishe_camera/: camera_node_factory.hpp
edge/src/bishe_camera/src/: camera_node.cpp  camera_node_main.cpp
edge/src/bishe_detector/: CMakeLists.txt  package.xml
edge/src/bishe_detector/include/bishe_detector/: detection_gate.hpp  detector_node_factory.hpp  detector_result_utils.hpp  yolo.h  yolov10.h  yolov5a.h  yolov8.h
edge/src/bishe_detector/src/: detector_node.cpp  detector_node_main.cpp  trt_engine.cc  yolo.cc  yolov8.cc
edge/src/bishe_detector/test/: test_detection_gate.cpp  test_shared_frame_ring.cpp
edge/src/bishe_launch/: setup.py
edge/src/bishe_launch/config/: cameras.yaml
edge/src/bishe_launch/launch/: bishe.launch.py  multicamera.launch.py  vision_only.launch.py
edge/src/bishe_launch/test/: test_multicamera_config.py
edge/src/bishe_monitor/: CMakeLists.txt  package.xml
edge/src/bishe_monitor/config/: config.yaml
edge/src/bishe_monitor/include/bishe_monitor/: alarm_event_payload.hpp  alarm_playback_command.hpp  alarm_upload_gate.hpp  async_task_worker.hpp
edge/src/bishe_monitor/src/: monitor_node.cpp
edge/src/bishe_monitor/test/: test_alarm_event_payload.cpp  test_alarm_playback_command.cpp  test_alarm_upload_gate.cpp  test_async_task_worker.cpp
edge/src/bishe_mqtt/: CMakeLists.txt  README.md  package.xml
edge/src/bishe_mqtt/src/: mqtt_node.cpp
edge/src/bishe_msgs/: CMakeLists.txt  package.xml
edge/src/bishe_msgs/include/bishe_msgs/: shared_frame_ring.hpp
edge/src/bishe_msgs/msg/: DetectorResult.msg  SharedFrameRef.msg
edge/src/bishe_streamer/: CMakeLists.txt  package.xml
edge/src/bishe_streamer/src/: intercom_node.cpp  streamer_node.cpp
esp8266/: README.md  esp8266-oled-mqtt-uart.ino  main.cc  use_selfwifi.cc  verify_auth_flow.py
esp8266/esp8266-oled-mqtt-uart/: esp8266-oled-mqtt-uart.ino
lunwen/: create_docx.js  draw_diagram.py  generate_section.py  insert_section.py  package-lock.json  package.json  render_math.py  section_3_2.docx  section_3_2.md  section_3_2_content.docx  yolov8_architecture.py  ~$ction_3_2_content.docx  论文.docx
lunwen/unpacked/: [Content_Types].xml
lunwen/unpacked/docProps/: core.xml  custom.xml
lunwen/unpacked/word/: fontTable.xml
lunwen/unpacked/word/_rels/: document.xml.rels
lunwen/unpacked_paper/docProps/: app.xml
lunwen/unpacked_paper/word/: document.xml  numbering.xml  settings.xml  styles.xml
static/css/: style.css
stm32/STM32-BISHE/Core/Src/: usart.c
stm32/STM32-BISHE/MDK-ARM/STM32-BISHE/: STM32-BISHE.axf  STM32-BISHE.build_log.htm  STM32-BISHE.hex  STM32-BISHE.htm  STM32-BISHE.map  STM32-BISHE_STM32-BISHE.dep  usart.crf
templates/: alerts.html  base.html  index.html  login.html  monitor.html  register.html  settings.html  user_index.html  user_management.html
web/: AGENTS.md  README.md  app.py  config.py  exts.py  test_servo.py
web/blueprints/: __init__.py  auth.py  capture.py  main.py  models.py  mqtt_manager.py  settings.py  user_management.py  video_stream.py
web/docs/superpowers/plans/: 2026-04-14-servo-control-plan.md
web/docs/superpowers/specs/: 2026-03-16-settings-dashboard-design.md  2026-04-14-servo-control-design.md
web/static/css/: style.css
web/templates/: alerts.html  base.html  index.html  login.html  monitor.html  register.html  settings.html  user_management.html
(+156 files in other folders)
