<?xml version="1.0"?>
<?xml_model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bishe_launch</name>
  <version>0.1.0</version>
  <description>Launch files for bishe safety detection system</description>
  <maintainer email="maintainer@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
